--- a/views/home.html
+++ b/views/home.html
@@ -4,56 +4,152 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Inicio - MercadoLiebre</title>
-        <link rel="stylesheet" type="text/css" href="/css/gnrl.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> <script src="https://kit.fontawesome.com/169d2e6577.js" crossorigin="anonymous"></script> 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> <script src="https://kit.fontawesome.com/169d2e6577.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="/css/gnrl.css">
     </head>
-    <body>
-        <header class="container">
-            <div class="navbar">
-                <div class="container-fluid">
-                    <div class="d-flex">
-                        <a href="" class="navbar-brand"><img src="/images/logo-mercado-liebre.svg" alt="Logo" class="logo d-inline-block" style="width: 100px;height: auto;"></a> 
-                        <div class="input-group"> <input type="text" class="form-control" placeholder="Buscar productos, marcas"> <span class="input-group-text" id="basic-addon1"><i class="fa-solid fa-magnifying-glass"></i></span> </div>
+    <body class="home">
+        <header class="bg-yellow">
+            <div class="container">
+                <div class="navbar">
+                    <div class="container-fluid">
+                        <div class="d-flex flex-fill">
+                            <a href="" class="navbar-brand"> <img src="/images/logo-mercado-liebre.svg" alt="Logo" class="logo d-inline-block"> </a>
+                            <div class="input-group"> <input type="text" placeholder="Buscar productos, marcas" style="font-size: 0.75rem;height: 40px;" class="form-control px-3"> <span class="input-group-text" style="font-size: 0.75rem;height: 40px;"><i class="fa-solid fa-magnifying-glass"></i></span> </div>
+                        </div>
+                        <form class="d-flex" role="search"> <a href="" class="md-a"><i class="fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a> </form>
                     </div>
-                    <form class="d-flex" role="search"> <a href="" class ="md-a"><i class="fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a> </form>
                 </div>
+                <nav class="navbar navbar-expand-md">
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"> <span class="navbar-toggler-icon"></span> </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item"> <a class="nav-item">Ofertas</a> </li>
+                                <li class="nav-item"> <a class="nav-item">Tiendas Oficiales</a> </li>
+                                <li class="nav-item"> <a class="nav-item">Vender</a> </li>
+                                <li class="nav-item"> <a class="nav-item">Ayuda</a> </li>
+                            </ul>
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item"> <a class="nav-item" href="/register">Creá tu cuenta<i class="fa-solid fa-address-card"></i></a> </li>
+                                <li class="nav-item"> <a class="nav-item" href="/login">Ingresá<i class="fa-solid fa-arrow-right-to-bracket"></i></a> </li>
+                                <li class="nav-item"> <a class="nav-item" href="">Mis compras<i class="fa-solid fa-basket-shopping"></i></a> </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
             </div>
-            <nav class="navbar navbar-expand-md">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"> <span class="navbar-toggler-icon"></span> </button> 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"> <a class="nav-item">Ofertas</a> </li>
-                            <li class="nav-item"> <a class="nav-item">Tiendas Oficiales</a> </li>
-                            <li class="nav-item"> <a class="nav-item">Vender</a> </li>
-                            <li class="nav-item"> <a class="nav-item">Ayuda</a> </li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"> <a class="nav-item" href="/register">Creá tu cuenta<i class="fa-solid fa-address-card"></i></a> </li>
-                            <li class="nav-item"> <a class="nav-item" href="/login">Ingresá<i class="fa-solid fa-arrow-right-to-bracket"></i></a> </li>
-                            <li class="nav-item"> <a class="nav-item" href="">Mis compras<i class="fa-solid fa-basket-shopping"></i></a> </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
         </header>
-        <img src="/images/img-home-banner.jpg" alt="img-home-banner" class="banner"> 
+        <img src="/images/img-home-banner.jpg" alt="img-home-banner" class="banner">
         <main>
             <div class="container">
                 <h2>Basado en tu última visita</h2>
                 <div class="row">
                     <div class="col-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" style="width: 200px; height: auto;" class="d-block m-auto"> 
-                                <div class="d-block" style="position: relative;">
-                                    <hr class="">
-                                    <div style="width: 40px;height: 40px;position: absolute;top: -20px;right: 0;" class="d-flex text-center border rounded-circle justify-content-center text-success bg-white"><i style="" class="fa-solid fa-truck align-self-center"></i></div>
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
                                 </div>
-                                <div class="d-flex"><span style="font-size: 24px;" class="align-self-center">$ 18.000</span><small style="" class="text-success ms-2 align-self-center">14% OFF</small></div>
-                                <h5>Samsung galaxy s10</h5>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 6.770</span> <small class="text-success ms-2 align-self-center">40% OFF</small> </div>
+                                <h5 class="mx-3">Cafetera Moulinex</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 230.000</span> <small class="text-success ms-2 align-self-center">20% OFF</small> </div>
+                                <h5 class="mx-3">MacBook Pro 2019</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 70.500</span> <small class="text-success ms-2 align-self-center">10% OFF</small> </div>
+                                <h5 class="mx-3">Samsung Galaxy S10</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 23.200</span> <small class="text-success ms-2 align-self-center">5% OFF</small> </div>
+                                <h5 class="mx-3">SmartTv Samsung 43"</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h2>Sección de Ofertas</h2>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 6.770</span> <small class="text-success ms-2 align-self-center">40% OFF</small> </div>
+                                <h5 class="mx-3">Cafetera Moulinex</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 230.000</span> <small class="text-success ms-2 align-self-center">20% OFF</small> </div>
+                                <h5 class="mx-3">MacBook Pro 2019</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 70.500</span> <small class="text-success ms-2 align-self-center">10% OFF</small> </div>
+                                <h5 class="mx-3">Samsung Galaxy S10</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card product">
+                            <div class="card-body p-0 py-3">
+                                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart" class="d-block m-auto img">
+                                <div class="d-block divisor-container">
+                                    <hr>
+                                    <div class="d-flex text-center border rounded-circle justify-content-center text-success bg-white truck"> <i style="" class="fa-solid fa-truck align-self-center"></i> </div>
+                                </div>
+                                <div class="d-flex price-container mx-3"> <span class="align-self-center price">$ 23.200</span> <small class="text-success ms-2 align-self-center">5% OFF</small> </div>
+                                <h5 class="mx-3">SmartTv Samsung 43"</h5>
                             </div>
                         </div>
                     </div>
