--- a/views/home.html
+++ b/views/home.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </main>
-        <footer class="text-dark-gray">
+        <footer class="text-dark-gray pt-4">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-12 col-lg-4 content">
