--- a/views/register.html
+++ b/views/register.html
@@ -82,37 +82,37 @@
                             <div class="card-body">
                                 <div class="mb-3">
                                     <label class="form-label">Nombre completo</label>
-                                    <input type="text" class="form-control" placeholder="ej: Juan Perez">
+                                    <input name="nombre" type="text" class="form-control" placeholder="ej: Juan Perez">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Fecha de nacimiento</label>
-                                    <input type="date" class="form-control">
+                                    <input name="fecha_nacimiento" type="date" class="form-control">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Domicilio</label>
-                                    <input type="text" class="form-control is-invalid" placeholder="ej: Calle Falsa 123">
+                                    <input name="domicilio" type="text" class="form-control is-invalid" placeholder="ej: Calle Falsa 123">
                                     <span class="invalid-feedback">Este campo es requerido</span>
                                 </div>
                                 <hr>
                                 <div class="mb-3">
                                     <label class="form-label">Usuario</label>
-                                    <input type="text" class="form-control" placeholder="ej: jperez86">
+                                    <input name="usuario" type="text" class="form-control" placeholder="ej: jperez86">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Correo electronico</label>
-                                    <input type="email" class="form-control" placeholder="ej: miemail@mail.com">
+                                    <input name="email" type="email" class="form-control" placeholder="ej: miemail@mail.com">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" placeholder="ej: miClaveSegura">
+                                    <input name="clave" type="password" class="form-control" placeholder="ej: miClaveSegura">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Confirmar Contraseña</label>
-                                    <input type="password" class="form-control" placeholder="ej: miClaveSegura">
+                                    <input name="confirmacion_clave" type="password" class="form-control" placeholder="ej: miClaveSegura">
                                 </div>
                                 <div class="mb-3">
                                     <label class="form-label">Foto de perfil</label>
-                                    <input type="file" class="form-control">
+                                    <input name="foto_perfil" type="file" class="form-control">
                                 </div>
                                 <hr>
                                 <div class="mb-3">
@@ -132,23 +132,23 @@
                                 </div>
                                 <ul class="list-group">
                                     <li class="list-group-item">
-                                        <input class="form-check-input" type="checkbox" id="categorías_interes_1" value="Electro">
+                                        <input name="interes" class="form-check-input" type="checkbox" id="categorías_interes_1" value="Electro">
                                         <label class="form-check-label" for="categorías_interes_1">Electro</label>
                                     </li>
                                     <li class="list-group-item">
-                                        <input class="form-check-input" type="checkbox" id="categorías_interes_2" value="Moda">
+                                        <input name="interes" class="form-check-input" type="checkbox" id="categorías_interes_2" value="Moda">
                                         <label class="form-check-label" for="categorías_interes_2">Moda</label>
                                     </li>
                                     <li class="list-group-item">
-                                        <input class="form-check-input" type="checkbox" id="categorías_interes_3" value="Hogar">
+                                        <input name="interes" class="form-check-input" type="checkbox" id="categorías_interes_3" value="Hogar">
                                         <label class="form-check-label" for="categorías_interes_3">Hogar</label>
                                     </li>
                                     <li class="list-group-item">
-                                        <input class="form-check-input" type="checkbox" id="categorías_interes_4" value="Juguetería">
+                                        <input name="interes" class="form-check-input" type="checkbox" id="categorías_interes_4" value="Juguetería">
                                         <label class="form-check-label" for="categorías_interes_4">Juguetería</label>
                                     </li>
                                     <li class="list-group-item">
-                                        <input class="form-check-input" type="checkbox" id="categorías_interes_5" value="Vida sana">
+                                        <input name="interes" class="form-check-input" type="checkbox" id="categorías_interes_5" value="Vida sana">
                                         <label class="form-check-label" for="categorías_interes_5">Vida sana</label>
                                     </li>
                                 </ul>
