--- a/views/register.html
+++ b/views/register.html
@@ -17,7 +17,7 @@
                         <div class="d-flex flex-fill me-lg-4">
                             <div class="row w-100">
                                 <div class="col-3 text-center">
-                                    <a href="" class="navbar-brand">
+                                    <a href="/" class="navbar-brand">
                                     <img src="/images/logo-mercado-liebre.svg" alt="Logo" class="logo d-inline-block">
                                     </a>
                                 </div>
