--- a/public/css/gnrl.css
+++ b/public/css/gnrl.css
@@ -73,7 +73,7 @@ header .navbar a.navbar-brand .logo {
     min-width: 70px;
 }
 
-header .navbar #buscador input, header .navbar #buscador span{
+header .navbar #buscador input, header .navbar #buscador button {
     font-size: 0.75rem;
     height: 35px;
 }
@@ -99,6 +99,10 @@ footer .copyright {
     border-color: #ebebeb;
 }
 
+.home main .card.product:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+
 .home main .card.product .img {
     max-width: 200px;
     height: auto;
@@ -118,12 +122,16 @@ footer .copyright {
     font-size: 16px;
 }
 
+.home main .card.product:hover .description {
+    display: block !important;
+}
+
 .home main .card.product .divisor-container {
     position: relative;
 }
 
 .home main .card.product .divisor-container hr{
-    border-color: #ebebeb;
+    border-color: #ccc;
 }
 
 .home main .card.product .divisor-container .truck {
@@ -132,23 +140,19 @@ footer .copyright {
     position: absolute;
     top: -20px;
     right: 15px;
+    transition: transform .5s ease;
 }
 
-
-/* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-
+.home main .card.product .divisor-container .truck:hover {
+    transform:rotate(-90deg);
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-    .home main .card.product {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }
+.login .form-login #submit {
+    transition: background-color .5s linear;
 }
 
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-
+.login .form-login #submit:hover {
+    background-color: #0022AA;
+    border-color: #0022AA;
 }
 
