--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
                 <div class="navbar">
                     <div class="container-fluid">
                         <div class="d-flex flex-fill me-lg-4">
-                            <div class="row w-100">
+                            <form class="row w-100">
                                 <div class="col-3 text-center">
                                     <a href="/" class="navbar-brand">
                                     <img src="/images/logo-mercado-liebre.svg" alt="Logo" class="logo d-inline-block">
@@ -23,16 +23,16 @@
                                 </div>
                                 <div class="col-9">
                                     <div class="input-group" id="buscador">
-                                        <input type="text" placeholder="Buscar productos, marcas" class="form-control px-3">
-                                        <span class="input-group-text">
+                                        <input type="text" placeholder="Buscar productos, marcas" class="form-control px-3" name="buscar">
+                                        <button class="input-group-text" type="submit">
                                         <i class="fa-solid fa-magnifying-glass"></i>
-                                        </span>
+                                        </button>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                         <div class="d-flex">
-                            <a href="" class="ms-4"><i class="me-2 fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a>
+                            <a href="/" class="ms-4"><i class="me-2 fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                                     <span class="align-self-center price">$ 6.770</span>
                                     <small class="text-success ms-2 align-self-center discount">40% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">Cafetera Moulinex</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">Cafetera Moulinex</h5>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                                     <span class="align-self-center price">$ 230.000</span>
                                     <small class="text-success ms-2 align-self-center discount">20% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">MacBook Pro 2019</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">MacBook Pro 2019</h5>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                     <span class="align-self-center price">$ 70.500</span>
                                     <small class="text-success ms-2 align-self-center discount">10% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">Samsung Galaxy S10</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">Samsung Galaxy S10</h5>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                                     <span class="align-self-center price">$ 23.200</span>
                                     <small class="text-success ms-2 align-self-center discount">5% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">SmartTv Samsung 43"</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">SmartTv Samsung 43"</h5>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                     <span class="align-self-center price">$ 6.770</span>
                                     <small class="text-success ms-2 align-self-center discount">40% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">Cafetera Moulinex</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">Cafetera Moulinex</h5>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                                     <span class="align-self-center price">$ 230.000</span>
                                     <small class="text-success ms-2 align-self-center discount">20% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">MacBook Pro 2019</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">MacBook Pro 2019</h5>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                                     <span class="align-self-center price">$ 70.500</span>
                                     <small class="text-success ms-2 align-self-center discount">10% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">Samsung Galaxy S10</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">Samsung Galaxy S10</h5>
                             </div>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                                     <span class="align-self-center price">$ 23.200</span>
                                     <small class="text-success ms-2 align-self-center discount">5% OFF</small>
                                 </div>
-                                <h5 class="mx-3 mt-2 d-none d-sm-inline description text-dark-gray">SmartTv Samsung 43"</h5>
+                                <h5 class="mx-3 mt-2 d-none description text-dark-gray">SmartTv Samsung 43"</h5>
                             </div>
                         </div>
                     </div>
