--- a/views/register.html
+++ b/views/register.html
@@ -9,13 +9,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> <script src="https://kit.fontawesome.com/169d2e6577.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="/css/gnrl.css">
     </head>
-    <body class="home">
+    <body class="register">
         <header class="bg-yellow text-dark-gray fs-12">
             <div class="container pb-2">
                 <div class="navbar">
                     <div class="container-fluid">
                         <div class="d-flex flex-fill me-lg-4">
-                            <div class="row w-100">
+                            <form class="row w-100">
                                 <div class="col-3 text-center">
                                     <a href="/" class="navbar-brand">
                                     <img src="/images/logo-mercado-liebre.svg" alt="Logo" class="logo d-inline-block">
@@ -23,16 +23,16 @@
                                 </div>
                                 <div class="col-9">
                                     <div class="input-group" id="buscador">
-                                        <input type="text" placeholder="Buscar productos, marcas" class="form-control px-3">
-                                        <span class="input-group-text">
+                                        <input type="text" placeholder="Buscar productos, marcas" class="form-control px-3" name="buscar">
+                                        <button class="input-group-text" type="submit">
                                         <i class="fa-solid fa-magnifying-glass"></i>
-                                        </span>
+                                        </button>
                                     </div>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                         <div class="d-flex">
-                            <a href="" class="ms-4"><i class="me-2 fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a>
+                            <a href="/" class="ms-4"><i class="me-2 fa-solid fa-hand-holding"></i> Comprá en cuotas y sin tarjeta de crédito</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-9 col-lg-6">
-                        <div class="card">
+                        <form class="card" action="/">
                             <div class="card-header">Crear nueva cuenta</div>
                             <div class="card-body">
                                 <div class="mb-3">
@@ -153,11 +153,11 @@
                                     </li>
                                 </ul>
                                 <div class="mt-3">
-                                    <a class="btn btn-success" href="/">Registrarme</a>
+                                    <button class="btn btn-success" type="submit">Registrarme</button>
                                     <button class="btn btn-secondary" type="reset">Limpiar formulario</button>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
